--- a/EzbillApp/app/src/main/AndroidManifest.xml
+++ b/EzbillApp/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         android:theme="@style/Theme.EzbillApp"
         tools:targetApi="31">
         <activity
+            android:name=".Splash"
+            android:exported="false" />
+        <activity
             android:name=".AllGroups"
             android:exported="false" />
         <activity
@@ -101,6 +104,9 @@
             android:exported="false" />
         <activity
             android:name=".PhoneActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Splash"
             android:exported="false" />
     </application>
 
